# my-benchmark

./: .gitignore  README.md
analysis/agent-history-analysis/: analyze_agent_histories.py  pyproject.toml  render_interactive_dashboard.py  render_visual_dashboard.py
analysis/agent-history-analysis/outputs/: analysis_summary.json  interactive_summary.md  report.md  session_summary.csv  source_inventory.csv  token_usage_by_session.csv  token_usage_by_source.csv  top_categories.csv  top_projects.csv  top_token_sessions.csv  top_tools.csv  visual_summary.md
analysis/agent-history-analysis/outputs/layout_checks/: dashboard_overview_audit_layout_report.json  dashboard_overview_audit_layout_report.md  dashboard_overview_layout_report.md  layout_summary.json  source_artifacts_audit_layout_report.md  source_artifacts_layout_report.md  token_usage_dashboard_audit_layout_report.json  token_usage_dashboard_audit_layout_report.md  token_usage_dashboard_layout_report.md
benchmark/: EVALUATION.md  README.md  RUN_REPORT_TEMPLATE.md  TASK_FORMAT.md  TASK_REPORT_TEMPLATE.md  cases_manifest.jsonl  dataset_summary.md  design_notes.md  pilot_task_index.md  private_cases_manifest.jsonl  rubric.yaml  task_index.md
benchmark/public_dataset/: README.md  cases_manifest.jsonl
benchmark/reports/: subagent_dry_run_report_2026-03-19.md
benchmark/research/: benchmark_case_candidates.md  benchmark_inventory.md  benchmark_sources_manifest.md  casepack_validation.md  evidence_trace_map.md  (+9 more)
scripts/: build-benchmark-manifest.mjs  migrate-to-swebench-format.mjs  new-validation-run.ps1
(+337 files in other folders)
