[project]
name = "agent-history-analysis"
version = "0.1.0"
description = "Analyze local Claude/Codex interaction histories and imported snapshots."
requires-python = ">=3.11"
dependencies = [
  "janome>=0.5.0",
  "matplotlib>=3.10.1",
  "pandas>=2.2.3",
  "tabulate>=0.9.0",
]

[tool.uv]
package = false
